syntax = "proto3";

package istio.mixer.adapter.sample.check;

import "mixer/v1/config/descriptor/value_type.proto";
import "pkg/template/mixer/TemplateExtensions.proto";

option (istio.mixer.v1.config.template.template_variety) = TEMPLATE_VARIETY_CHECK;
option (istio.mixer.v1.config.template.template_name) = "Sample";

message Type {
    istio.mixer.v1.config.descriptor.ValueType check_expression = 1;
}

message ConstructorParam {
    string check_expression = 1;
}
